# Post-Analyzer-app

./: DEPLOYMENT.md  README.md  SETUP.md  docker-compose.yml  start.sh  start_enhanced.sh
.github/workflows/: ci.yml
backend/: .env  .env.example  Dockerfile  add-api-key.js  env.production.example  package-lock.json  package.json  post_analyzer.db
backend/cpp/: CMakeLists.txt  CMakeLists_rest.txt  Dockerfile  README.md  analyzer.cpp  build.sh  cpp_analyzer_server  post_analyzer_simple  rest_api.cpp  simple_http_server.cpp  simple_rest_api.cpp  start.sh  test.cpp  test_integration.sh  test_rest_api.sh
backend/cpp/cpp_analyzer_server.dSYM/Contents/: Info.plist
backend/cpp/cpp_analyzer_server.dSYM/Contents/Resources/DWARF/: cpp_analyzer_server
backend/ml/: Dockerfile  build.sh  ml_service.py  requirements.txt  setup.py  start_ml_service.sh
backend/src/: server.ts
backend/src/controllers/: postController.ts
backend/src/middleware/: auth.ts
backend/src/models/: Post.ts
backend/src/routes/: posts.ts
backend/src/services/: analysisService.ts  enhancedAnalysisService.ts
backend/src/utils/: database.ts
database/migrations/: 001_initial_schema.sql
frontend/: env.production.example  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/posts/[id]/: page.tsx
frontend/src/components/: CreatePostModal.tsx  Pagination.tsx  PostCard.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
scripts/: setup-database.sh
